Many upgrades fixes and more